--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "jshint": "node_modules/.bin/jshint bin/ lib/",
-    "test": "npm run jshint && bin/web-component-workspace.js install --repo PolymerElements/iron-component-page -d workdir",
+    "test": "npm run jshint",
     "publish": "git push && git push --tags",
     "release-patch": "mversion patch -m && npm run publish",
     "release-minor": "mversion minor -m && npm run publish",
