--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/PolymerLabs/web-component-workspace",
   "dependencies": {
     "bower": "^1.4.1",
+    "es6-promise": "^2.3.0",
     "nedb": "^1.1.2",
     "nodegit": "^0.4.1",
     "path": "^0.11.14",
